--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
 					<img src="Images/10.jpg">
 				</a>
 			</div>
+						<div class="grid-item">
+				<a href="#" title="Always Be Happy">
+					<img src="Images/11.jpg">
+				</a>
+			</div>
+			<div class="grid-item">
+				<a href="#" title="I Know i Wouldn't Do It">
+					<img src="Images/12.jpg">
+				</a>
+			</div>
+			<div class="grid-item">
+				<a href="#" title="It's OK">
+					<img src="Images/13.jpg">
+				</a>
+			</div>
 		</div>
 	</div>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
@@ -69,7 +84,7 @@
 
 </body>
 <footer>
-	<p>&copy; @meaningfulwordscatalog</p>
+	<p>&copy; 2020 @meaningfulwordscatalog</p>
 </footer>
 
 </html>
