--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 					<img src="Images/13.jpg">
 				</a>
 			</div>
+			<div class="grid-item">
+				<a href="#" title="Take Right Decisions">
+					<img src="Images/14.jpg">
+				</a>
+			</div>
 		</div>
 	</div>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
