--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 	<title>Quotes Gallery</title>
+	<link rel="icon" type="image/png" sizes="16x16" href="images/logo.png">
 	<link rel="stylesheet" href="./style.css">
 
 </head>
